--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-simple-image-slider": "^2.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
