edit some compobents and edit .env location, some points in header and footer to let them able to be adaptive with dynamic content

--- a/package.json
+++ b/package.json
@@ -29,7 +29,15 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules":{
+      "prettier/prettier":[
+        "error",
+        {
+          "endOfLine":"auto"
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
