--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,17 @@
     "react/jsx-filename-extension": "off",
     "react/react-in-jsx-scope": "off",
     "no-console": "warn",
-    "no-eval": "error"
+    "no-eval": "error",
+    "jsx-a11y/label-has-associated-control": [ "error", {
+      "required": {
+        "some": [ "nesting", "id"  ]
+      }
+    }],
+    "jsx-a11y/label-has-for": [ "error", {
+      "required": {
+        "some": [ "nesting", "id"  ]
+      }
+    }]
+
   }
 }
