--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eslint-prettier-config",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://abdallahSQaradeh.github.io/hotel-GSG",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -24,7 +25,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
-    "_lint": "./node_modules/.bin/eslint src/*.js --fix"
+    "_lint": "./node_modules/.bin/eslint src/*.js --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +64,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.0.0",
+    "gh-pages": "^3.1.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2"
